--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,3 +26,11 @@
     @apply hidden  
   }
 } */
+/* 
+body {
+  background: linear-gradient(to top right, #005bff, #7d00b4);
+} */
+
+body {
+  background-color: hsla(89, 43%, 51%, 0.3);
+}
